# pet-store

./: Cargo.toml  application.properties  stress-test.sh
src/: client.rs  lib.rs  main.rs  server.rs
