[package]
name = "pet-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "main"

[[bin]]
path = "src/client.rs"
name = "client"

[[bin]]
path = "src/server.rs"
name = "server"

[lib]
path = "src/lib.rs"

[dependencies]
aul = "1.3.1"
whdp = "1.1.8"
wjp = "1.0.2"
wbsl = { path = "../wbsl" }